--- a/views/public/app.css
+++ b/views/public/app.css
@@ -1,12 +1,17 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 /* preset */
-/* *{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} */
-
+    font-family: 'Nunito', sans-serif;
+}
+.open-sans{
+    font-family: 'Open Sans', sans-serif;
+}
 /* logomarca */
 
 #logomarca{
@@ -235,7 +240,9 @@ main .grid-details .grid-item{
     padding: 20px;
     margin: 10px 25px 0 0;
     border-radius: 5px;
-    background-color: lightgray;
+}
+.bg-grey{
+    background-color: grey;
 }
 .edit_servico_perfil{
     margin: 10px 25px 0 0;
@@ -273,31 +280,38 @@ main .grid-details .grid-item{
     padding: 10px;
 }
 .messages_body{
+    list-style: none;
     line-height: 20px;
+    padding: 0;
+    margin: 0;
 }
 
 .received{
-    width: 45%;
+    max-width: 50%;
     text-align: left;
-    margin: 10px 0;
+}
+.msg-received{
+    display: inline-block;
     border-radius: 0 10px 10px 10px;
     background-color: rgba(0, 0, 0, 0.2);
     color: #fff;
-    font-weight: 400;
+    text-align: left;
+    padding: 10px;
+}
+.sended{
+    max-width: 50%;
+    margin: 0 0 0 auto;
+    text-align: right;
+}
+.msg-sended{
+    display: inline-block;
+    border-radius: 10px 0 10px 10px;
+    background-color: #fff;
+    color: #000;
     padding: 10px;
     text-align: left;
 }
 
-.sended{
-    width: 45%;
-    margin: 10px 0 10px auto;
-    border-radius: 10px 0 10px 10px;
-    background-color: rgba(0, 0, 0, 0.2);
-    color: #fff;
-    font-weight: 400;
-    padding: 10px;
-    text-align: right;
-}
 /* media query 100px */
 
 @media(max-width: 1000px){
