--- a/views/public/app.css
+++ b/views/public/app.css
@@ -311,10 +311,16 @@ main .grid-details .grid-item{
     padding: 10px;
     text-align: left;
 }
+.avaliacoes-container{
+    width: 100%;
+    height: 100%;
+    padding-right: 30px;
+    padding-bottom: 100px;
+}
 
 /* media query 100px */
 
-@media(max-width: 1000px){
+@media(max-width: 993px){
 
     .padding-md{
         padding: 5px !important;
@@ -363,6 +369,20 @@ main .grid-details .grid-item{
     .profile-list-service li{
         margin: 5px;
     }
+    .avaliacoes-container{
+        padding-right: 20px;
+    }
+    .list-contatos{
+        display: flex;
+        overflow-y: hidden;
+        overflow-x: scroll;
+        align-items: center;
+        height: 100px;
+        width: 100%;
+    }
+    .profile-msg-contatos{
+        margin: 0 10px;
+    }
 }
 
 /* media query 768px */
@@ -374,3 +394,35 @@ main .grid-details .grid-item{
         margin: 0;
     }
 }
+
+/* Component rating */
+/* component */
+
+.star-rating {
+    display:flex;
+    flex-direction: row-reverse;
+    font-size:2em;
+    justify-content:space-around;
+    align-items: center;
+    padding:0 .2em;
+    text-align:center;
+    width:5em;
+  }
+  
+  .star-rating input {
+    display:none;
+  }
+  
+  .star-rating label {
+    color:#ccc;
+    cursor:pointer;
+  }
+  
+  .star-rating :checked ~ label {
+    color:#f90;
+  }
+  
+  .star-rating label:hover,
+  .star-rating label:hover ~ label {
+    color:#fc0;
+  }
