--- a/views/public/app.css
+++ b/views/public/app.css
@@ -276,7 +276,7 @@ main .grid-details .grid-item{
     width: 100%;
     height: 300px;
     background-color: lightgrey;
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
     padding: 10px;
 }
 .messages_body{
