--- a/src/views/public/app.css
+++ b/src/views/public/app.css
@@ -142,10 +142,17 @@ main .grid-details .grid-item{
     margin-top: 100px;
     width: 100%;
 }
+.job-container{
+    display: flex;
+}
+
 #vertical-navbar{
-    width: 300px;
+    width: 270px;
     position: fixed;
+    background-color: darkslategray;
+    color: #fff;
     left: 0;
+    top: 20px;
     bottom: 20px;
     height: 100%;
     transition: 1s all;
@@ -153,15 +160,15 @@ main .grid-details .grid-item{
 #job-list{
     width: 100%;
     height: 100;
-    margin-left: 300px;
+    margin-left: 160px;
 }
 
 .cursor_pointer{
     cursor: pointer;
     color: red;
     position: fixed;
-    top: 100px;
-    left: 300px;
+    top: 150px;
+    left: 270px;
     transition: 1s all;
 }
 .border-hover{
@@ -171,7 +178,7 @@ main .grid-details .grid-item{
     border-bottom:3px solid DarkSlateGray;
 }
 #close_navbar:checked ~ #vertical-navbar{
-    left: -300px;
+    left: -320px;
     transition: 1s all;
 }
 #close_navbar:checked ~ #job-list{
@@ -325,8 +332,21 @@ main .grid-details .grid-item{
     .padding-md{
         padding: 5px !important;
     }
+    .job-container{
+        display: flex;
+        flex-direction: column;
+    }
+    #close_navbar:checked ~ #vertical-navbar{
+        left: 0;
+        transition: 1s all;
+    }
     #vertical-navbar{
-        left: -300px ;
+        left: 0;
+        top: 0;
+        width: 100%;
+        position: relative;
+        padding: 0;
+        margin: 0 0 20px 0;
     }
     main .grid-details{
         width: 100%;
