--- a/src/views/public/app.css
+++ b/src/views/public/app.css
@@ -325,6 +325,17 @@ main .grid-details .grid-item{
     padding-bottom: 100px;
 }
 
+/* spinners */
+.await-request{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
 /* media query 100px */
 
 @media(max-width: 993px){
