--- a/src/views/public/app.css
+++ b/src/views/public/app.css
@@ -335,7 +335,10 @@ main .grid-details .grid-item{
     justify-content: center;
 }
 
-
+.list-contatos-container{
+    display: flex;
+    flex-direction: column;
+}
 /* media query 100px */
 
 @media(max-width: 993px){
@@ -413,6 +416,9 @@ main .grid-details .grid-item{
     }
     .profile-msg-contatos{
         margin: 0 10px;
+    }
+    .list-contatos-container{
+        flex-direction: row;
     }
 }
 
