--- a/src/views/public/app.css
+++ b/src/views/public/app.css
@@ -325,6 +325,20 @@ main .grid-details .grid-item{
     padding-bottom: 100px;
 }
 
+/* spinners */
+.await-request{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.list-contatos-container{
+    display: flex;
+    flex-direction: column;
+}
 /* media query 100px */
 
 @media(max-width: 993px){
@@ -402,6 +416,9 @@ main .grid-details .grid-item{
     }
     .profile-msg-contatos{
         margin: 0 10px;
+    }
+    .list-contatos-container{
+        flex-direction: row;
     }
 }
 
